# GnomeTools

./: .gitignore  LICENSE  README.md
amyTAP/: AllYearStarts.txt  BuildAll.py  BuildCubes.py  BuildSite.txt.py  BuildStartTimes.py  BuildViewer.py  RunPyGnome.py  TAP2shape.py  TAPCONFIG.txt  TAP_Setup.py  TAP_params.py  amy_sites.txt  site.txt
amyTAP/input_files/: coast.bna
batch_gnome/: CHANGES.txt  README.md  setup-2.py  setup.py  setup_extension.py
batch_gnome/batch_gnome/: __init__.py  batch_gnome.py  cy_tap_comp_volume.pyx  hazmat.py  nc_particles.py  oil_weathering.py  tap_comp_volume.py  tap_mod.py
batch_gnome/sample_run/: SD_StartSites.txt
batch_gnome/scripts/: BuildAll.py  BuildCFSCubes.py  BuildCommandFiles.py  BuildCubes.py  BuildSOMCommandFiles.py  BuildSite.txt.py  BuildStartTimes.py  (+12 more)
grid_plume/: .gitignore  conda_requirements.txt  plot_results.py  plotparticles.py  readme.rst  requirements.txt  setup.cfg  setup.py
grid_plume/gridplume/: __init__.py  create_grid.py  filter.pyx  grid.py  mass.py  nc_particles.py  particles.py  plotting.py  times.py
grid_plume/gridplume/scripts/: grid_plume.py  merge_grids.py  swept_area.py
grid_plume/scripts/: grid_plume.py  merge_grids.py  swept_area.py
lib_tap/: BuildAll.py  BuildCubes.py  BuildStartTimes.py  CleanAll.py  README.txt  RunPyGnome.py  SB_sites.txt  Setup_TAP.py  TAP2shape.py  TAP_Setup.py
libgoods/: CHANGES.txt  README.md  conda_requirements.txt  requirements.txt  setup.py
plumeKDE/: plumeKDE.py  plumegridKDE.py
post_gnome/: README.rst  conda_requirements.txt  requirements.txt  setup.py
(+302 files in other folders)
