
[metadata]
name = grid_plume
version = attr: gridplume.__version__
long_description = file: README.rst
license = CC-0
long_description_content_type = text/rst
author = NOAA ORR ERD
description="Computes grid of concentrations from particle tracking model output",

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
# install_requires =
#     numpy

[options.entry_points]
console_scripts =
    gp_grid_plume = gridplume.scripts.grid_plume:main
    gp_merge_grids = gridplume.scripts.merge_grids:main
    gp_swept_area = gridplume.scripts.swept_area:main
